--- a/app/lib/app_web/templates/course/index.html.eex
+++ b/app/lib/app_web/templates/course/index.html.eex
@@ -1,14 +1,27 @@
-<div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-3@s uk-text-center uk-grid-match" uk-grid>
+<div class="uk-grid-column-medium uk-grid-row-medium uk-child-width-1-3@s uk-grid-match" uk-grid>
     <%= for {course, i} <- Enum.with_index(@courses) do %>
     <div>
-        <div class="uk-card uk-card-default uk-card-body">
-          <p><%= Map.get(@semesters, :"#{course.semester_id}") %></p>
-          <p><%= course.department <> to_string(course.number) <> ": " <> course.name %></p>
-          <p>
-            <span><%= link "View", to: Routes.course_path(@conn, :show, course) %></span>
-            <span><%= link "Edit", to: Routes.course_path(@conn, :edit, course) %></span>
-            <span><%= link "Delete", to: Routes.course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"] %></span>
-          </p>
+        <div class="uk-card uk-card-small uk-card-default uk-card-hover">
+            <div class="uk-card-header">
+                <div class="uk-width-expand">
+                    <h3 class="uk-card-title uk-margin-remove-bottom">
+                      <%= course.department %><%= to_string(course.number) %>
+                    </h3>
+                    <p class="uk-text-meta uk-margin-remove-top uk-margin-remove-bottom">
+                      <%= course.name %> &mdash;
+                      <%= Map.get(@semesters, :"#{course.semester_id}") %> 
+                    </p>
+                </div>
+            </div>
+            <%= if course.allow_write do %>
+                <div class="uk-card-body">
+                    <p class="uk-margin-small">
+                        <%= link "View", to: Routes.course_path(@conn, :show, course), class: "uk-button uk-button-default" %>
+                        <%= link "Edit", to: Routes.course_path(@conn, :edit, course), class: "uk-button uk-button-default"  %>
+                        <%= link "Delete", to: Routes.course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"], class: "uk-button uk-button-default"  %>
+                    </p>
+                </div>
+            <% end%>
         </div>
     </div>
     <% end %>
