--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -1,8 +1,41 @@
-<h1><%= @submission.title %></h1>
-<span><i>Submitted in response to: <%= @topic.title %></i><span>
-<img src="<%= @submission.image_url %>">
-<span><%= @submission.description %></span>
+<div class="uk-margin-bottom">
+    <div class="uk-padding-small submission-body">
+        <h1 class="uk-heading-divider"><%= @submission.title %></h1>
+        <img src="<%= @submission.image_url %>">
+        <p><%= @submission.description %></p>
+    </div>
+</div>
 
+<h2>Comments</h2>
+
+<%= if length(@comments) != 0 do %>
+    <ul class="uk-comment-list">
+        <%= for {comment, i} <- Enum.with_index(@comments) do %>
+            <li class="comment">
+                <article class="uk-comment uk-visible-toggle speech-bubble" tabindex="-1">
+                    <div class="uk-comment-body">
+                        <p>
+                            <%= comment.description %>
+                        </p>
+                    </div>
+                </article>
+                <div class="comment-author comment-author-<%= if rem(i+1, 2) == 0 do %>even<% else %>odd<% end %>">
+                    Anonymous said <br>
+                    at <%= comment.inserted_at %>
+                    <%= if @can_edit || @uid == comment.user_id do %>
+                        <div>
+                          <%= link "Edit", to: Routes.comment_path(@conn, :edit, comment.id) %>
+                            |
+                          <%= link "Delete", to: Routes.comment_path(@conn, :delete, comment.id), method: :delete, data: [confirm: "Are you sure?"] %>
+                        </div>
+                    <% end %>
+                </div>
+            </li>
+        <% end %>
+    </ul>
+<% end %>
+
+<!--
 <%= if @topic.allow_submission_comments && @uid != @submission.user_id do %>
 <span><%= link "Post Comment", to: Routes.submission_comment_path(@conn, :new, @submission.id) %></span>
 <% end %>
@@ -13,19 +46,4 @@
 <span><%= link "Edit", to: Routes.submission_path(@conn, :edit, @submission) %></span>
 <% end %>
 <span><%= link "Back", to: Routes.topic_submission_path(@conn, :index, @topic) %></span>
-
-<%= if length(@comments) != 0 do %>
-<h2>Comments</h2>
-<%= for comment <- @comments do %>
-    <h2><%= comment.title %></h2>
-    <div class="comment-info"><span>Posted at: </span><span class="rating"><%= comment.inserted_at %></span></div>
-      <span><%= comment.description %></span>
-      <section class="row">
-      <article class="column"><span><%= link "Show", to: Routes.comment_path(@conn, :show, comment.id) %></span></article>
-      <%= if @can_edit || @uid == comment.user_id do %>
-      <article class="column"><span><%= link "Edit", to: Routes.comment_path(@conn, :edit, comment.id) %></span></article>
-      <article class="column"><span><%= link "Delete", to: Routes.comment_path(@conn, :delete, comment.id), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
-      <% end %>
-    </section>
-<% end %>
-<% end %>
+-->
