--- a/app/lib/app_web/templates/layout/app.html.eex
+++ b/app/lib/app_web/templates/layout/app.html.eex
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Yale Class Chat</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
 
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/css/uikit.min.css" />
@@ -15,19 +14,20 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.6/dist/js/uikit-icons.min.js"></script>
 
 
+    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <%= csrf_meta_tag() %>
   </head>
   <body>
     <header>
-      <section class="container top-matter">
+      <section class="container top-matter uk-padding-small uk-padding-remove-vertical uk-padding-remove-right ">
+        <a href="/">
         <div class="row">
             <div class="column">
-                Yale
-            </div>
-            <div class="column">
-                Class Q&amp;A
+                Yale Course Q&amp;A
             </div>
         </div>
+        </a>
+        <!--
         <nav role="navigation">
           <ul>
             <%= if is_nil(@conn.private.plug_session["uid"]) do %>
@@ -37,8 +37,10 @@
             <% end %>
           </ul>
         </nav>
+        -->
       </section>
     </header>
+    <%= render_existing @view_module, "breadcrumbs.html", assigns %>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
