--- a/app/assets/css/phoenix.css
+++ b/app/assets/css/phoenix.css
@@ -29,7 +29,17 @@
     font-style:italic;
 }
 
+html, body{
+  padding: 0;
+  margin: 0;
+}
+
+html{
+  height: 100%;
+}
+
 body {
+    min-height: 100%;
     color: #222222;
     margin:0;
     font-family: "Mallory";
