Fix links for new submission and breadcrumbs

--- a/app/lib/app_web/templates/submission/breadcrumbs.html.eex
+++ b/app/lib/app_web/templates/submission/breadcrumbs.html.eex
@@ -15,10 +15,12 @@
                 <%= @topic.title %>
             </span>
         </li>
+        <%= if !is_nil(assigns[:submission]) do %>
         <li>
             <span>
                 <%= @submission.title %>
             </span>
         </li>
+        <% end %>
     </ul>
 </div>
