Fix errors in student pathways

--- a/app/lib/app_web/templates/comment/form.html.eex
+++ b/app/lib/app_web/templates/comment/form.html.eex
@@ -5,8 +5,7 @@
     </div>
   <% end %>
 
-  <%= label f, :title %>
-  <%= text_input f, :title %>
+  <%= hidden_input f, :title, value: "Sample" %>
   <%= error_tag f, :title %>
 
   <%= label f, :description %>
