--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -4,6 +4,12 @@
         <img src="<%= @submission.image_url %>">
         <p><%= @submission.description %></p>
     </div>
+    <%= if @can_edit do %>
+    <%= link "Edit", to: Routes.submission_path(@conn, :edit, @submission.id) %>
+    |
+    <%= link "Delete", to: Routes.submission_path(@conn, :delete, @submission.id), method: :delete, data: [confirm: "Are you sure?"] %>
+    <% end %>
+    <%= @submission.avg_rating %>
 </div>
 
 <h2>Comments</h2>
@@ -20,9 +26,15 @@
                     </div>
                 </article>
                 <div class="comment-author comment-author-<%= if rem(i+1, 2) == 0 do %>even<% else %>odd<% end %>">
-                    Anonymous said <br>
-                    at <%= comment.inserted_at %>
-                    <%= if @can_edit || @uid == comment.user_id do %>
+                    <%= if @topic.anonymous do %>
+                            <% else %>
+                            <b><%= comment.user_id %></b>
+                            /
+                     said <br>
+                    at
+                    <% end %>
+                    <%= comment.inserted_at %>
+                    <%= if @is_admin || @uid == comment.user_id do %>
                         <div>
                           <%= link "Edit", to: Routes.comment_path(@conn, :edit, comment.id) %>
                             |
@@ -35,15 +47,61 @@
     </ul>
 <% end %>
 
-<!--
-<%= if @topic.allow_submission_comments && @uid != @submission.user_id do %>
-<span><%= link "Post Comment", to: Routes.submission_comment_path(@conn, :new, @submission.id) %></span>
+<div class="form">
+<a name="newrating"></a>
+<% action = if is_nil(@my_rating) do
+Routes.submission_rating_path(@conn, :create, @submission.id)
+else
+Routes.rating_path(@conn, :update, @my_rating)
+end %>
+<%= form_for @rating_changeset, action, fn f -> %>
+  <%= if @rating_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <%= if !is_nil(@my_rating) do %>
+    <input name="_method" type="hidden" value="put">
+  <% end %>
+
+  <%= label f, :score %>
+  <% default_value = if !is_nil(@my_rating) do
+   @my_rating.score
+   else
+   nil
+   end%>
+  <%= select f, :score, 1..5 , value: default_value%>
+  <%= error_tag f, :score %>
+
+  <div>
+    <%= submit "Save" %>
+  </div>
 <% end %>
-<%= if @topic.allow_submission_voting && @uid != @submission.user_id do %>
-<span><%= link "Add Rating", to: Routes.submission_rating_path(@conn, :new, @submission.id) %></span>
+</div>
+
+<div class="form">
+<a name="newcomment"></a>
+<%= form_for @comment_changeset, Routes.submission_comment_path(@conn, :create, @submission.id), fn f -> %>
+  <%= if @comment_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <%= hidden_input f, :title, value: "Sample" %>
+  <%= error_tag f, :title %>
+
+  <%= label f, :description %>
+  <%= text_input f, :description %>
+  <%= error_tag f, :description %>
+
+  <div>
+    <%= submit "Save" %>
+  </div>
 <% end %>
-<%= if @can_edit do %>
-<span><%= link "Edit", to: Routes.submission_path(@conn, :edit, @submission) %></span>
-<% end %>
-<span><%= link "Back", to: Routes.topic_submission_path(@conn, :index, @topic) %></span>
--->
+</div>
+
+<div class="uk-position-fixed uk-position-z-index absolute uk-dark uk-position-bottom-right">
+<a href="#newcomment" class="add uk-box-shadow-small uk-box-shadow-hover-large" uk-marker></a>
+</div>
