--- a/app/assets/css/phoenix.css
+++ b/app/assets/css/phoenix.css
@@ -1,134 +1,197 @@
-/* Includes some default style for the starter application.
- * This can be safely deleted to start fresh.
- */
 
-/* Milligram v1.3.0 https://milligram.github.io
- * Copyright (c) 2017 CJ Patoilo Licensed under the MIT license
- */
-
-*,*:after,*:before{box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}body{color:#000000;font-family:'Helvetica', 'Arial', sans-serif;font-size:1.6em;font-weight:300;line-height:1.6}blockquote{border-left:0.3rem solid #d1d1d1;margin-left:0;margin-right:0;padding:1rem 1.5rem}blockquote *:last-child{margin-bottom:0}.button,button,input[type='button'],input[type='reset'],input[type='submit']{background-color:#0069d9;border:0.1rem solid #0069d9;border-radius:.4rem;color:#fff;cursor:pointer;display:inline-block;font-size:1.1rem;font-weight:700;height:3.8rem;letter-spacing:.1rem;line-height:3.8rem;padding:0 3.0rem;text-align:center;text-decoration:none;text-transform:uppercase;white-space:nowrap}.button:focus,.button:hover,button:focus,button:hover,input[type='button']:focus,input[type='button']:hover,input[type='reset']:focus,input[type='reset']:hover,input[type='submit']:focus,input[type='submit']:hover{background-color:#606c76;border-color:#606c76;color:#fff;outline:0}.button[disabled],button[disabled],input[type='button'][disabled],input[type='reset'][disabled],input[type='submit'][disabled]{cursor:default;opacity:.5}.button[disabled]:focus,.button[disabled]:hover,button[disabled]:focus,button[disabled]:hover,input[type='button'][disabled]:focus,input[type='button'][disabled]:hover,input[type='reset'][disabled]:focus,input[type='reset'][disabled]:hover,input[type='submit'][disabled]:focus,input[type='submit'][disabled]:hover{background-color:#0069d9;border-color:#0069d9}.button.button-outline,button.button-outline,input[type='button'].button-outline,input[type='reset'].button-outline,input[type='submit'].button-outline{background-color:transparent;color:#0069d9}.button.button-outline:focus,.button.button-outline:hover,button.button-outline:focus,button.button-outline:hover,input[type='button'].button-outline:focus,input[type='button'].button-outline:hover,input[type='reset'].button-outline:focus,input[type='reset'].button-outline:hover,input[type='submit'].button-outline:focus,input[type='submit'].button-outline:hover{background-color:transparent;border-color:#606c76;color:#606c76}.button.button-outline[disabled]:focus,.button.button-outline[disabled]:hover,button.button-outline[disabled]:focus,button.button-outline[disabled]:hover,input[type='button'].button-outline[disabled]:focus,input[type='button'].button-outline[disabled]:hover,input[type='reset'].button-outline[disabled]:focus,input[type='reset'].button-outline[disabled]:hover,input[type='submit'].button-outline[disabled]:focus,input[type='submit'].button-outline[disabled]:hover{border-color:inherit;color:#0069d9}.button.button-clear,button.button-clear,input[type='button'].button-clear,input[type='reset'].button-clear,input[type='submit'].button-clear{background-color:transparent;border-color:transparent;color:#0069d9}.button.button-clear:focus,.button.button-clear:hover,button.button-clear:focus,button.button-clear:hover,input[type='button'].button-clear:focus,input[type='button'].button-clear:hover,input[type='reset'].button-clear:focus,input[type='reset'].button-clear:hover,input[type='submit'].button-clear:focus,input[type='submit'].button-clear:hover{background-color:transparent;border-color:transparent;color:#606c76}.button.button-clear[disabled]:focus,.button.button-clear[disabled]:hover,button.button-clear[disabled]:focus,button.button-clear[disabled]:hover,input[type='button'].button-clear[disabled]:focus,input[type='button'].button-clear[disabled]:hover,input[type='reset'].button-clear[disabled]:focus,input[type='reset'].button-clear[disabled]:hover,input[type='submit'].button-clear[disabled]:focus,input[type='submit'].button-clear[disabled]:hover{color:#0069d9}code{background:#f4f5f6;border-radius:.4rem;font-size:86%;margin:0 .2rem;padding:.2rem .5rem;white-space:nowrap}pre{background:#f4f5f6;border-left:0.3rem solid #0069d9;overflow-y:hidden}pre>code{border-radius:0;display:block;padding:1rem 1.5rem;white-space:pre}hr{border:0;border-top:0.1rem solid #f4f5f6;margin:3.0rem 0}input[type='email'],input[type='number'],input[type='password'],input[type='search'],input[type='tel'],input[type='text'],input[type='url'],textarea,select{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;border:0.1rem solid #d1d1d1;border-radius:.4rem;box-shadow:none;box-sizing:inherit;height:3.8rem;padding:.6rem 1.0rem;width:100%}input[type='email']:focus,input[type='number']:focus,input[type='password']:focus,input[type='search']:focus,input[type='tel']:focus,input[type='text']:focus,input[type='url']:focus,textarea:focus,select:focus{border-color:#0069d9;outline:0}select{background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="%23d1d1d1" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>') center right no-repeat;padding-right:3.0rem}select:focus{background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="%230069d9" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>')}textarea{min-height:6.5rem}label,legend{display:block;font-size:1.6rem;font-weight:700;margin-bottom:.5rem}fieldset{border-width:0;padding:0}input[type='checkbox'],input[type='radio']{display:inline}.label-inline{display:inline-block;font-weight:normal;margin-left:.5rem}.row{display:flex;flex-direction:column;padding:0;width:100%}.row.row-no-padding{padding:0}.row.row-no-padding>.column{padding:0}.row.row-wrap{flex-wrap:wrap}.row.row-top{align-items:flex-start}.row.row-bottom{align-items:flex-end}.row.row-center{align-items:center}.row.row-stretch{align-items:stretch}.row.row-baseline{align-items:baseline}.row .column{display:block;flex:1 1 auto;margin-left:0;max-width:100%;width:100%}.row .column.column-offset-10{margin-left:10%}.row .column.column-offset-20{margin-left:20%}.row .column.column-offset-25{margin-left:25%}.row .column.column-offset-33,.row .column.column-offset-34{margin-left:33.3333%}.row .column.column-offset-50{margin-left:50%}.row .column.column-offset-66,.row .column.column-offset-67{margin-left:66.6666%}.row .column.column-offset-75{margin-left:75%}.row .column.column-offset-80{margin-left:80%}.row .column.column-offset-90{margin-left:90%}.row .column.column-10{flex:0 0 10%;max-width:10%}.row .column.column-20{flex:0 0 20%;max-width:20%}.row .column.column-25{flex:0 0 25%;max-width:25%}.row .column.column-33,.row .column.column-34{flex:0 0 33.3333%;max-width:33.3333%}.row .column.column-40{flex:0 0 40%;max-width:40%}.row .column.column-50{flex:0 0 50%;max-width:50%}.row .column.column-60{flex:0 0 60%;max-width:60%}.row .column.column-66,.row .column.column-67{flex:0 0 66.6666%;max-width:66.6666%}.row .column.column-75{flex:0 0 75%;max-width:75%}.row .column.column-80{flex:0 0 80%;max-width:80%}.row .column.column-90{flex:0 0 90%;max-width:90%}.row .column .column-top{align-self:flex-start}.row .column .column-bottom{align-self:flex-end}.row .column .column-center{-ms-grid-row-align:center;align-self:center}@media (min-width: 40rem){.row{flex-direction:row;margin-left:-1.0rem;width:calc(100% + 2.0rem)}.row .column{margin-bottom:inherit;padding:0 1.0rem}}a{color:#0069d9;text-decoration:none}a:focus,a:hover{color:#606c76}dl,ol,ul{list-style:none;margin-top:0;padding-left:0}dl dl,dl ol,dl ul,ol dl,ol ol,ol ul,ul dl,ul ol,ul ul{font-size:90%;margin:1.5rem 0 1.5rem 3.0rem}ol{list-style:decimal inside}ul{list-style:circle inside}.button,button,dd,dt,li{margin-bottom:1.0rem}fieldset,input,select,textarea{margin-bottom:1.5rem}blockquote,dl,figure,form,ol,p,pre,table,ul{margin-bottom:2.5rem}table{border-spacing:0;width:100%}td,th{border-bottom:0.1rem solid #e1e1e1;padding:1.2rem 1.5rem;text-align:left}td:first-child,th:first-child{padding-left:0}td:last-child,th:last-child{padding-right:0}b,strong{font-weight:bold}p{margin-top:0}h1,h2,h3,h4,h5,h6{font-weight:300;letter-spacing:-.1rem;margin-bottom:2.0rem;margin-top:0}h1{font-size:4.6rem;line-height:1.2}h2{font-size:3.6rem;line-height:1.25}h3{font-size:2.8rem;line-height:1.3}h4{font-size:2.2rem;letter-spacing:-.08rem;line-height:1.35}h5{font-size:1.8rem;letter-spacing:-.05rem;line-height:1.5}h6{font-size:1.6rem;letter-spacing:0;line-height:1.4}img{max-width:100%}.clearfix:after{clear:both;content:' ';display:table}.float-left{float:left}.float-right{float:right}
-
-/* General style */
-h1{font-size: 3.6rem; line-height: 1.25}
-h2{font-size: 2.8rem; line-height: 1.3}
-h3{font-size: 2.2rem; letter-spacing: -.08rem; line-height: 1.35}
-h4{font-size: 1.8rem; letter-spacing: -.05rem; line-height: 1.5}
-h5{font-size: 1.6rem; letter-spacing: 0; line-height: 1.4}
-h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
-
-.container{
-  margin: 0 auto;
-  max-width: 80.0rem;
-  padding: 0 2.0rem;
-  position: relative;
-  width: 100%
-}
-select {
-  width: auto;
+@font-face {
+    font-family: "YaleNew";
+    src: url("https://yaleidentity.yale.edu/sites/all/themes/yalenew_base/fonts/YaleNew/YaleNew-normal-normal/yalenew-roman-webfont.woff2") format('woff');
 }
 
-/* Alerts and form errors */
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
+@font-face{
+    font-family:"Mallory";
+    src:url(https://yaleidentity.yale.edu/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-Book.woff) format("woff"),url(/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-Book.woff2) format("woff2");
+    font-weight:normal;
+    font-style:normal;
 }
-.alert-info {
-  color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+@font-face{
+    font-family:"Mallory";
+    src:url(https://yaleidentity.yale.edu/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-Bold.woff) format("woff"),url(/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-Bold.woff2) format("woff2");
+    font-weight:bold;
+    font-style:normal;
 }
-.alert-warning {
-  color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
+@font-face{
+    font-family:"Mallory";
+    src:url(https://yaleidentity.yale.edu/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-BookItalic.woff) format("woff"),url(/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-BookItalic.woff2) format("woff2");
+    font-weight:normal;
+    font-style:italic;
 }
-.alert-danger {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
-}
-.alert p {
-  margin-bottom: 0;
-}
-.alert:empty {
-  display: none;
-}
-.help-block {
-  color: #a94442;
-  display: block;
-  margin: -1rem 0 2rem;
+@font-face{
+    font-family:"Mallory";
+    src:url(https://yaleidentity.yale.edu/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-BoldItalic.woff) format("woff"),url(/sites/all/themes/yalenew_base/fonts/Mallory/Mallory/Mallory-BoldItalic.woff2) format("woff2");
+    font-weight:bold;
+    font-style:italic;
 }
 
-/* Phoenix promo and logo */
-.phx-hero {
-  text-align: center;
-  border-bottom: 1px solid #e3e3e3;
-  background: #eee;
-  border-radius: 6px;
-  padding: 3em;
-  margin-bottom: 3rem;
-  font-weight: 200;
-  font-size: 120%;
-}
-.phx-hero p {
-  margin: 0;
-}
-.phx-logo {
-  min-width: 300px;
-  margin: 1rem;
-  display: block;
-}
-.phx-logo img {
-  width: auto;
-  display: block;
-}
-
-/* Headers */
-header {
-  width: 100%;
-  background: #fdfdfd;
-  border-bottom: 1px solid #eaeaea;
-  margin-bottom: 2rem;
-}
-header section {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-header section :first-child {
-  order: 2;
-}
-header section :last-child {
-  order: 1;
-}
-header nav ul,
-header nav li {
-  margin: 0;
+html, body{
   padding: 0;
-  display: block;
-  text-align: right;
-  white-space: nowrap;
-}
-header nav ul {
-  margin: 1rem;
-  margin-top: 0;
-}
-header nav a {
-  display: block;
+  margin: 0;
 }
 
-@media (min-width: 40.0rem) { /* Small devices (landscape phones, 576px and up) */
-  header section {
-    flex-direction: row;
-  }
-  header nav ul {
-    margin: 1rem;
-  }
-  .phx-logo {
-    flex-basis: 527px;
-    margin: 2rem 1rem;
-  }
+html{
+  height: 100%;
 }
+
+body {
+    min-height: 100%;
+    color: #222222;
+    margin:0;
+    font-family: "Mallory";
+    padding-bottom:3rem;
+    background-color:#ecf0f1;
+    text-rendering: optimizeLegibility;
+    font-smooth: auto;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing:grayscale;
+}
+
+.main-body{
+   padding: 0 1rem 1rem 1rem;
+}
+
+.top-matter{
+    font-size: 2rem;
+    font-family: "YaleNew";
+    color: #fff;
+    background-color: #003366;
+}
+.top-matter a{
+    color: white;
+}
+.top-matter a:hover{
+    color: white;
+    text-decoration: none;
+}
+
+.topic-title, .submission-body {
+    background-color: white;
+}
+
+a {
+    color: #00356b;
+}
+a:hover {
+    color: #286dc0;
+    text-decoration: none;
+}
+
+span.vote span {
+  border: 1px solid #e5e5e5;
+  line-height: 0.5em;
+}
+
+.uk-card-footer .details {
+    font-size: 0.80rem;
+    color: #999;
+}
+
+a.add {
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+    border: 1px solid #222;
+}
+a.add:hover {
+    border: 1px solid #000;
+}
+
+article.uk-comment{
+    background-color: white;
+    padding: 15px;
+}
+
+li.comment{
+    margin-top: 30px;
+}
+
+.uk-comment-list > :nth-child(n+2) {
+    margin-top: 30px;
+}
+
+.speech-bubble {
+    position: relative;
+    border-radius: .4em;
+}
+
+.speech-bubble:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-top-color: #fff;
+    border-bottom: 0;
+    margin-left: -15px;
+    margin-bottom: -15px;
+}
+
+ul li.comment:nth-child(odd) .speech-bubble:after {
+    left: 30px;
+    border-right: 0;
+}
+ul li.comment:nth-child(even) .speech-bubble:after {
+    right: 15px;
+    border-left: 0;
+}
+
+div.comment-author {
+    font-size: 0.80rem;
+    color: #999;
+    margin-top: 15px;
+}
+div.comment-author-even {
+    text-align:right;
+    margin-right: 45px;
+}
+div.comment-author-odd {
+    text-align:left;
+    margin-left: 45px;
+}
+
+.breadcrumb-holder {
+    margin: 0;
+    padding: 0.5em 0 0.5em 15px;
+}
+
+.breadcrumb-holder ul {
+    margin-bottom: 0;
+}
+
+.uk-breadcrumb span, .uk-breadcrumb a {
+    text-transform: lower;
+    font-variant-caps: small-caps;
+}
+
+// https://flatuicolors.com/palette/defo
+.color-1{ border-left: 10px solid #1abc9c;}
+.color-2{ border-left: 10px solid #16a085;}
+.color-3{ border-left: 10px solid #2ecc71;}
+.color-4{ border-left: 10px solid #27ae60;}
+.color-5{ border-left: 10px solid #3498db;}
+.color-6{ border-left: 10px solid #2980b9;}
+.color-7{ border-left: 10px solid #9b59b6;}
+.color-8{ border-left: 10px solid #8e44ad;}
+.color-9{ border-left: 10px solid #34495e;}
+.color-10{ border-left: 10px solid #2c3e50;}
+.color-11{ border-left: 10px solid #f1c40f;}
+.color-12{ border-left: 10px solid #f39c12;}
+.color-13{ border-left: 10px solid #e67e22;}
+.color-14{ border-left: 10px solid #d35400;}
+.color-15{ border-left: 10px solid #e74c3c;}
+.color-16{ border-left: 10px solid #c0392b;}
+.color-17{ border-left: 10px solid #ecf0f1;}
+.color-18{ border-left: 10px solid #bdc3c7;}
+.color-19{ border-left: 10px solid #95a5a6;}
+.color-20{ border-left: 10px solid #7f8c8d;}
+
+.back-arrow {
+    margin-right: 0.5rem;
+}
+
+
