--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -1,31 +1,107 @@
-<h1><%= @submission.title %></h1>
-<span><i>Submitted in response to: <%= @topic.title %></i><span>
-<img src="<%= @submission.image_url %>">
-<span><%= @submission.description %></span>
+<div class="uk-margin-bottom">
+    <div class="uk-padding-small submission-body">
+        <h1 class="uk-heading-divider"><%= @submission.title %></h1>
+        <img src="<%= @submission.image_url %>">
+        <p><%= @submission.description %></p>
+    </div>
+    <%= if @can_edit do %>
+    <%= link "Edit", to: Routes.submission_path(@conn, :edit, @submission.id) %>
+    |
+    <%= link "Delete", to: Routes.submission_path(@conn, :delete, @submission.id), method: :delete, data: [confirm: "Are you sure?"] %>
+    <% end %>
+    <%= @submission.avg_rating %>
+</div>
 
-<%= if @topic.allow_submission_comments && @uid != @submission.user_id do %>
-<span><%= link "Post Comment", to: Routes.submission_comment_path(@conn, :new, @submission.id) %></span>
-<% end %>
-<%= if @topic.allow_submission_voting && @uid != @submission.user_id do %>
-<span><%= link "Add Rating", to: Routes.submission_rating_path(@conn, :new, @submission.id) %></span>
-<% end %>
-<%= if @can_edit do %>
-<span><%= link "Edit", to: Routes.submission_path(@conn, :edit, @submission) %></span>
-<% end %>
-<span><%= link "Back", to: Routes.topic_submission_path(@conn, :index, @topic) %></span>
+<h2>Comments</h2>
 
 <%= if length(@comments) != 0 do %>
-<h2>Comments</h2>
-<%= for comment <- @comments do %>
-    <h2><%= comment.title %></h2>
-    <div class="comment-info"><span>Posted at: </span><span class="rating"><%= comment.inserted_at %></span></div>
-      <span><%= comment.description %></span>
-      <section class="row">
-      <article class="column"><span><%= link "Show", to: Routes.comment_path(@conn, :show, comment.id) %></span></article>
-      <%= if @can_edit || @uid == comment.user_id do %>
-      <article class="column"><span><%= link "Edit", to: Routes.comment_path(@conn, :edit, comment.id) %></span></article>
-      <article class="column"><span><%= link "Delete", to: Routes.comment_path(@conn, :delete, comment.id), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
-      <% end %>
-    </section>
+    <ul class="uk-comment-list">
+        <%= for {comment, i} <- Enum.with_index(@comments) do %>
+            <li class="comment">
+                <article class="uk-comment uk-visible-toggle speech-bubble" tabindex="-1">
+                    <div class="uk-comment-body">
+                        <p>
+                            <%= comment.description %>
+                        </p>
+                    </div>
+                </article>
+                <div class="comment-author comment-author-<%= if rem(i+1, 2) == 0 do %>even<% else %>odd<% end %>">
+                    <%= if @topic.anonymous do %>
+                            <% else %>
+                            <b><%= comment.user_id %></b>
+                            /
+                     said <br>
+                    at
+                    <% end %>
+                    <%= comment.inserted_at %>
+                    <%= if @is_admin || @uid == comment.user_id do %>
+                        <div>
+                          <%= link "Edit", to: Routes.comment_path(@conn, :edit, comment.id) %>
+                            |
+                          <%= link "Delete", to: Routes.comment_path(@conn, :delete, comment.id), method: :delete, data: [confirm: "Are you sure?"] %>
+                        </div>
+                    <% end %>
+                </div>
+            </li>
+        <% end %>
+    </ul>
 <% end %>
+
+<div class="form">
+<a name="newrating"></a>
+<% action = if is_nil(@my_rating) do
+Routes.submission_rating_path(@conn, :create, @submission.id)
+else
+Routes.rating_path(@conn, :update, @my_rating)
+end %>
+<%= form_for @rating_changeset, action, fn f -> %>
+  <%= if @rating_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <%= if !is_nil(@my_rating) do %>
+    <input name="_method" type="hidden" value="put">
+  <% end %>
+
+  <%= label f, :score %>
+  <% default_value = if !is_nil(@my_rating) do
+   @my_rating.score
+   else
+   nil
+   end%>
+  <%= select f, :score, 1..5 , value: default_value%>
+  <%= error_tag f, :score %>
+
+  <div>
+    <%= submit "Save" %>
+  </div>
 <% end %>
+</div>
+
+<div class="form">
+<a name="newcomment"></a>
+<%= form_for @comment_changeset, Routes.submission_comment_path(@conn, :create, @submission.id), fn f -> %>
+  <%= if @comment_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <%= hidden_input f, :title, value: "Sample" %>
+  <%= error_tag f, :title %>
+
+  <%= label f, :description %>
+  <%= text_input f, :description %>
+  <%= error_tag f, :description %>
+
+  <div>
+    <%= submit "Save" %>
+  </div>
+<% end %>
+</div>
+
+<div class="uk-position-fixed uk-position-z-index absolute uk-dark uk-position-bottom-right">
+<a href="#newcomment" class="add uk-box-shadow-small uk-box-shadow-hover-large" uk-marker></a>
+</div>
