--- a/app/lib/app_web/templates/topic/breadcrumbs.html.eex
+++ b/app/lib/app_web/templates/topic/breadcrumbs.html.eex
@@ -10,11 +10,13 @@
                 <%= @course.department <> " " <> Integer.to_string(@course.number) %>
             </a>
         </li>
+        <%= if !is_nil(assigns[:topic]) do %>
         <li>
             <span>
                 <%= @topic.title %>
             </span>
         </li>
+        <% end %>
     </ul>
 </div>
 
