--- a/app/lib/app_web/templates/comment/show.html.eex
+++ b/app/lib/app_web/templates/comment/show.html.eex
@@ -17,4 +17,4 @@
 <%= if @can_edit do %>
 <span><%= link "Edit", to: Routes.comment_path(@conn, :edit, @comment) %></span>
 <% end %>
-<span><%= link "Back", to: Routes.submission_comment_path(@conn, :index, @submission) %></span>
+<span><%= link "Back", to: Routes.submission_path(@conn, :show, @submission) %></span>
