--- a/app/lib/app_web/templates/section/edit.html.eex
+++ b/app/lib/app_web/templates/section/edit.html.eex
@@ -2,4 +2,4 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.section_path(@conn, :update, @section)) %>
 
-<span><%= link "Back", to: Routes.course_section_path(@conn, :index, @section.course_id) %></span>
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @section.course_id) %></span>
