Create a shared template for displaying multiparagraph user input

--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -4,9 +4,7 @@
         <% if !is_nil(@submission.image_url) do %>        
             <img src="<%= @submission.image_url %>">
         <% end %>
-        <%= for para <- split_newlines(@submission.description) do %>
-            <p><%= para %></p>
-        <% end %>
+        <%= render AppWeb.HelperView, "multiparagraph_text.html", text: @submission.description %>
         <div class="submission-stats">
             <%= if @topic.anonymous do %>
             <% else %>
